style: switch to Java 21 methods